[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/ScoreUI.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/perfectdosvga437.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sprites/kv.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "3" ]
}

[sub_resource type="Animation" id=3]
resource_name = "timer_out"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 0.63728 ),
"update": 1,
"values": [ "3", "2", "1", "GO" ]
}

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 2 )

[node name="ColorRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -56.0
margin_right = 94.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 104.0
margin_right = -19.0
margin_bottom = -104.0

[node name="HBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_right = 138.0
margin_bottom = 112.0
alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
margin_top = 19.0
margin_right = 138.0
margin_bottom = 41.0
alignment = 1

[node name="Continue" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
margin_left = 27.0
margin_right = 111.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.0901961, 0.647059, 0.647059, 1 )
custom_fonts/font = ExtResource( 1 )
text = "CONTINUE"
flat = true

[node name="VBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
margin_top = 45.0
margin_right = 138.0
margin_bottom = 67.0
alignment = 1

[node name="Restart" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_left = 31.0
margin_right = 106.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.243137, 0.243137, 0.564706, 1 )
custom_fonts/font = ExtResource( 1 )
text = "RESTART"
flat = true

[node name="VBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
margin_top = 71.0
margin_right = 138.0
margin_bottom = 93.0
alignment = 1

[node name="MainMenu" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer3"]
margin_right = 138.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.552941, 0.176471, 0.176471, 1 )
custom_fonts/font = ExtResource( 1 )
text = "GO TO MAINMENU"
flat = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -16.0
margin_right = 20.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 0.0509804, 0.0509804, 1 )
custom_fonts/font = SubResource( 1 )
text = "3"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/timer_out = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_up" from="Control/MarginContainer/HBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="Control/MarginContainer/HBoxContainer/VBoxContainer2/Restart" to="." method="_on_Restart_button_up"]
[connection signal="button_up" from="Control/MarginContainer/HBoxContainer/VBoxContainer3/MainMenu" to="." method="_on_MainMenu_button_up"]
